# sveltekit-modal

./: .gitignore  .replit  LICENSE.md  README.md  deno.json  dnt.ts  import-map.json  mod.ts  replit.nix
.github/workflows/: publish.yml
example-app/: package-lock.json  package.json  svelte.config.js  vite.config.ts
example-app/src/routes/: +page.svelte
example-app/src/routes/api/summarize/: +server.py
src/: bin.mjs  example.ts
src/vite/: include.d.ts  mod.ts  sveltekit_modal_deploy.py  sveltekit_modal_serve.py
src/vite/sveltekit_modal/: __init__.py  app.py  config.py  deploy.py  pyproject.toml  serve.py  sveltekit_modal_config.py
src/vite/sveltekit_modal/src/routes/api/upload/: +server.py
src/vite/sveltekit_python_vercel/: bin.mjs  build.py  deploy.py  serve.py
test/: example.test.ts
